--- a/docs/style.css
+++ b/docs/style.css
@@ -14,8 +14,6 @@ h1 {
   font-size: 8rem;
 }
 
-
-
 .todo1,
 .todoClone {
   margin: 10px;
@@ -112,28 +110,29 @@ h1 {
   font-size: 3rem;
 }
 
-
 @media only screen and (max-width: 901px) {
-  #val{
-    width: 30rem;
+  #val {
+    width: 50%;
+  }
+  .liClone {
+    width: 50%;
   }
 }
 
-@media only screen and (max-width: 420px) {
-  #val{
-    width: 25rem;
+@media only screen and (max-width: 386px) {
+  #val {
+    width: 70%;
+  }
+  .liClone {
+    width: 70%;
   }
 }
 
-@media only screen and (max-width: 360px) {
-  #val{
-    width: 19rem;
+@media only screen and (max-width: 281px) {
+  #val {
+    width: 50%;
+  }
+  .liClone {
+    width: 50%;
   }
 }
-
-@media only screen and (max-width: 325px) {
-  #val{
-    width: 14rem;
-  }
-}
-
