--- a/docs/scss/_reset.scss
+++ b/docs/scss/_reset.scss
@@ -1,17 +1,17 @@
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-  }
-  
-  html {
-    font-family: "Dancing Script", cursive;
-    font-size: 10px;
-  }
-  
-  body {
-    width: 100%;
-    text-align: center;
-    background-image: linear-gradient(120deg, #1766cf, #0eb5ed);
-    height: 100vh;
-  }
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+html {
+  font-family: "Roboto", sans-serif;
+  font-size: 10px;
+}
+
+body {
+  width: 100%;
+  text-align: center;
+  background-image: linear-gradient(120deg, #1766cf, #0eb5ed);
+  height: 100vh;
+}
