--- a/scss/css/main.css
+++ b/scss/css/main.css
@@ -79,10 +79,10 @@ body {
 .container-items-todo {
   height: 95%;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
+  align-content: flex-start;
   gap: 1rem;
   flex-wrap: wrap;
-  overflow: scroll;
   padding: 2rem 0;
   position: relative;
 }
@@ -94,6 +94,7 @@ body {
   height: 25%;
   border-radius: 1rem;
   transition: 1s;
+  margin: 1rem;
 }
 
 .categoryContainter {
